# DevTeam6

./: .env.conductor  .env.gemini  .env.jules  .env.rag  .gitattributes  .gitignore  AGENTS.md  AGENT_COMMAND_CHEATSHEET.md  AI_VISIBILITY_SOLUTION.md  ASSET_INVENTORY.md  CONTRIBUTING.md  COPILOT_AGENT_CHEAT_SHEET.md  Copilt.ChatFeed.QFaaS.Transformer.json  Copilt.ChatFeed.QFaaS.Transformer.md  DEVELOPMENT_ENVIRONMENT.md  DOCUMENTS.md  FILE_INDEX.md  GAPS_AND_IMPROVEMENTS.md  GEMINI_INTEGRATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  NAMING_IMPROVEMENTS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_FINAL_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_FASTAPI.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_SUMMARY.md  PLANNING_COMPLETE.md  PLAN_SUMMARY.md  README.md  REVITHION-STARTUP.bat  REVITHION-STARTUP.ps1  REVITHION-STUDIO-MASTER-PLAN.md  SECURITY.md  START_HERE.md  STRATEGIC_PLAN_2026.md  (+9 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: COPILOT-AGENT-ARCHITECTURE.md  COPILOT-CHEATSHEET.md  PULL_REQUEST_TEMPLATE.md  boring-cyborg.yml  copilot-instructions.md  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/agents/: ace-step-expert.agent.md  amp-modeling-expert.agent.md  audio-dsp-expert.agent.md  cmake-cpp20-expert.agent.md  context-loader.agent.md  context7.agents.md  faust-dsp-expert.agent.md  juce-framework-expert.agent.md  linux-nvidia-cuda-python.agent.md  lisp-token-expert.agent.md  mastering-engineer.agent.md  memory-keeper.agent.md  midi-expert.agent.md  mix-engineer.agent.md  my- specification.agent.md  my--transcendent-coding-agentagent.agent.md  my-3rd-agent.agent.md  my-4th-agent.agent.md  my-5th-agent.agent.md  my-6th-agent.agent.md  my-bugfixer.agent.md  my-c++.agent.md  my-content.eval.agent.md  my-context7.agent.md  my-electron.agent.md  my-gpt5beast.agent.md  (+26 more)
REVITHION-STUDIO/: .gitignore  CMakeLists.txt
REVITHION-STUDIO/Local_C_Drive/: NVIDIA_CUDA_X_MANIFEST.md
REVITHION-STUDIO/docs/: OPENDAW-ARCHITECTURE-STUDY.md  RESEARCH-FINDINGS-2026-03-05.md  REVITHION-Book-Extractions.md  nuendo-14-feature-extraction.md
REVITHION-STUDIO/faust/: multiband_comp.dsp  parametric_eq.dsp  phaser.dsp  plate_reverb.dsp  tape_delay.dsp  vocoder.dsp
REVITHION-STUDIO/src/: Main.cpp
REVITHION-STUDIO/src/ai/: ACEStepBridge.cpp  ACEStepBridge.h  CopilotBridge.cpp  CopilotBridge.h  CoverGenerator.cpp  CoverGenerator.h  LEGOPipeline.cpp  LEGOPipeline.h  MasteringAssistant.cpp  MasteringAssistant.h  VoiceCommand.cpp  VoiceCommand.h
REVITHION-STUDIO/src/blocks/: BlockDefs.h  RoutingGrid.cpp  RoutingGrid.h
REVITHION-STUDIO/src/dsp/: ADSR.cpp  ADSR.h  BiquadFilter.cpp  BiquadFilter.h  DSPUtils.h  DelayLine.cpp  DelayLine.h  Oscillator.cpp  Oscillator.h  faust_multiband_comp.cpp  faust_parametric_eq.cpp  faust_phaser.cpp  faust_plate_reverb.cpp  faust_tape_delay.cpp  faust_vocoder.cpp
REVITHION-STUDIO/src/engine/: AudioGraph.h  AutomationLane.cpp  AutomationLane.h  BoxGraph.cpp  BoxGraph.h  ControlRoom.cpp  ControlRoom.h  MIDISystem.cpp  MIDISystem.h  MixConsole.cpp  MixConsole.h
REVITHION-STUDIO/src/neural/: AmpCatalog.cpp  AmpCatalog.h  LSTMAmpModel.cpp  LSTMAmpModel.h  NeuralAmpModel.h
REVITHION-STUDIO/src/plugins/: PluginExport.cpp  PluginExport.h  RevithionLookAndFeel.cpp  RevithionLookAndFeel.h
REVITHION-STUDIO/src/rack/: AudioModule.h  ModuleFactory.h  PatchCable.h  RackPreset.h  RackProcessor.h  RoutingGraph.h
REVITHION-STUDIO/src/settings/: AudioPresets.h  AudioSettings.cpp  AudioSettings.h
REVITHION-STUDIO/src/ui/: CableRenderer.h  ModuleComponent.h  RackView.h  SettingsPanel.cpp  SettingsPanel.h
REVITHION-STUDIO/tokens/: design-tokens.sexp  generate-tokens.py  macros.sexp
antigravity-sphere/: RAG.txt  index.html  package-lock.json  package.json
app/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
config/: conductor.yaml  gemini.yaml  jules.yaml  rag_config.yaml
context7/: agents.md  prompt-guide.md
docs/: DEPLOYMENT_GUIDE.md  GITHUB_APPS_AND_EXTENSIONS.md  QUICK_REFERENCE.md  README.md  SPEC_KIT_INTEGRATION.md  TROUBLESHOOTING.md
local-ai/: .env.example  Dockerfile  README.md  requirements.txt
my-mcp-tools/: index.mjs  package-lock.json  package.json
neon-space-defender/: index.html  package-lock.json  package.json  style.css
projects/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: verify-environment.ps1  verify-environment.sh
skills/: README.md
templates/: README.md
templates/audio-dsp-workspace/: .gitignore  CMakeLists.txt  README.md
templates/audio-dsp-workspace/.devcontainer/: Dockerfile  devcontainer.json
templates/audio-dsp-workspace/.github/: template.yml
templates/audio-dsp-workspace/.github/workflows/: ci.yml
templates/audio-dsp-workspace/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
templates/c-workspace/: .gitignore  CMakeLists.txt  Makefile  README.md
templates/c-workspace/.devcontainer/: Dockerfile  devcontainer.json
templates/c-workspace/.github/: template.yml
templates/c-workspace/.github/workflows/: ci.yml
templates/c-workspace/src/: main.c
templates/cpp-workspace/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
templates/cpp-workspace/.devcontainer/: Dockerfile  devcontainer.json
templates/cpp-workspace/.github/: template.yml
templates/cpp-workspace/.github/workflows/: ci.yml
templates/cpp-workspace/src/: main.cpp
templates/cpp-workspace/tests/: test_main.cpp
templates/graphics-engine-workspace/: .gitignore  CMakeLists.txt  README.md
templates/graphics-engine-workspace/.devcontainer/: Dockerfile  devcontainer.json
templates/graphics-engine-workspace/.github/: template.yml
templates/graphics-engine-workspace/.github/workflows/: ci.yml
templates/graphics-engine-workspace/shaders/: shader.vert
templates/graphics-engine-workspace/src/: main.cpp
(+321 files in other folders)
